# hothello

./: README.md  othello.cabal  stack.yaml
app/: Main.hs
src/: Board.hs  Coordinate.hs  Game.hs  Input.hs  Lib.hs  Move.hs  Player.hs
test/: Spec.hs  Util.hs
