name:                othello
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/othello#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Board, Player, Coordinate, Input, Game
  build-depends:       base >= 4.7 && < 5, containers, tasty, tasty-hunit, mtl, tasty-quickcheck, parsec
  default-language:    Haskell2010

executable othello-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , othello, tasty-quickcheck, parsec, mtl
  default-language:    Haskell2010

test-suite othello-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, parsec
                     , mtl
                     , othello, tasty, tasty-hunit, tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/othello
