name:                othello
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/olivierverdier/hothello#readme
license:             BSD3
license-file:        LICENSE
author:              Olivier Verdier
maintainer:          Olivier Verdier
copyright:           2017 Olivier Verdier
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  extensions:          NoImplicitPrelude
  hs-source-dirs:      src
  exposed-modules:     Move, Board, Player, Coordinate, Input, Game
  build-depends:       base >= 4.7 && < 5, protolude, containers, tasty, tasty-hunit, mtl, tasty-quickcheck, parsec, text
  default-language:    Haskell2010

executable othello-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , othello, tasty-quickcheck, parsec, mtl, protolude
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude

test-suite othello-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Util
  main-is:             Spec.hs
  build-depends:       base, parsec
                     , mtl, protolude
                     , othello, tasty, tasty-hunit, tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/olivierverdier/hothello
